[tool.poetry]
name = "accesslistmanager"
version = "1.1.1"
authors = ["brodokk <brodokk@brodokk.space>"]
description = "Discord bot for managing NeosVR sessions access via cloud variable."
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
disnake = "^2.6.0"
SQLAlchemy = "^1.4.41"
neosvrpy = {git = "https://github.com/brodokk/neos.py", rev = "255511d56554805da68adeedecec82e30534fe30"}

[tool.poetry.scripts]
accesslistmanager = "accesslistmanager.main:main"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"