[tool.poetry]
name = "accesslistmanager"
version = "1.1.3"
authors = ["brodokk <brodokk@brodokk.space>"]
description = "Discord bot for managing Resonite sessions access via cloud variable."
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
disnake = "^2.6.0"
SQLAlchemy = "^1.4.41"
resonitepy = {git = "https://github.com/brodokk/resonitepy"}

[tool.poetry.scripts]
accesslistmanager = "accesslistmanager.main:main"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"