[tool.poetry]
name = "accesslistmanager"
version = "2"
authors = ["brodokk <brodokk@brodokk.space>"]
description = "Discord bot for managing Resonite sessions access via cloud variable."
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
disnake = "^2.6.0"
SQLAlchemy = "^1.4.41"
resonitepy = {git = "https://github.com/brodokk/resonitepy"}
alembic = "^1.12.0"

[tool.poetry.scripts]
accesslistmanager = "accesslistmanager.main:main"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"